+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.3.3c1?
===================================

*Release date: XXX *

Core and builtins
-----------------

- Patch #820195: object.__contains__() now returns True or False instead
  of 1 or 0.

Extension modules
-----------------

- Bug #703198: Ignore "b" and "t" in os.popen on Unix.

- Patch #803998: Deal with errors in SSL_write correctly.

- The xml.parsers.expat module now provides Expat 1.95.7.

- Patch #813445: Add missing socket.IPPROTO_IPV6.

- Bug #807314: Properly raise an exception if non-existent Tcl
  variable is accessed.

- Bug #811028: ncurses.h breakage on FreeBSD/MacOS X

- Bug #814613: INET_ADDRSTRLEN fix needed for all compilers on SGI

- The sre module (which underlies the re module) now uses a non-recursive
  algorithm for matching. A bunch of ugly REs that used to fail with a 
  RuntimeError will now work. See Bug #757624

Library
-------

- Bug #792101: Add missing file operations for httplib.SSLFile.

- Bug #811082: test_tempfile fails if space in install directory.

- Bug #780461: platform.mac_ver() raised MacOSError exception under OS X.

- Bug #812202: random.randrange() returned only even numbers
  for range lengths above 2**53.

- Bug #823328: urllib2's HTTP Digest Auth support works again.

What's New in Python 2.3.2 (final)?
===================================

*Release date: 03-Oct-2003*

Core and builtins
-----------------

- A workaround for an OpenBSD compiler bug that meant python failed to
  detect floating point overflow in some cases.

Tools/Demos
-----------

- Tools/scripts/md5sum.py opens files in binary mode by default. Opening
  in text mode is almost certainly not what you want.

Extension modules
-----------------

- The documentation for bsddb now warns strongly about using the legacy
  API in multi-threaded applications.

What's New in Python 2.3.2c1?
=============================
